--- a/src/main/resources/docs-src/templates/404.html
+++ b/src/main/resources/docs-src/templates/404.html
@@ -7,7 +7,8 @@
 </header>
 <main th:class="'main'">
     <div th:class="'main__content'">
-        <p>404: page not found</p>
+        <p th:class="'not-found'"
+           th:text="'404 not found'"></p>
     </div>
     <div th:replace="fragment :: main__meta">
     </div>
