--- a/src/main/resources/docs-src/templates/fragment.html
+++ b/src/main/resources/docs-src/templates/fragment.html
@@ -2,42 +2,53 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
     <meta th:charset="'utf-8'">
-    <meta th:content="'width=device-width, initial-scale=1'" th:name="'viewport'">
+    <meta th:content="'width=device-width, initial-scale=1'"
+          th:name="'viewport'">
     <base th:href="'/blog/'">
     <title th:text="'my-blog'"></title>
-    <link th:href="'style.css'" th:rel="'stylesheet'">
+    <link th:href="'style.css'"
+          th:rel="'stylesheet'">
     <script th:src="'script.js'"></script>
 </head>
 <body>
-<header th:class="'header'" th:fragment="header">
-    <h1>
-        <a th:href="''" th:text="'my-blog'"></a>
+<header th:class="'header'"
+        th:fragment="header">
+    <h1 th:class="'header__logo'">
+        <a th:href="''"
+           th:text="'my-blog'"></a>
     </h1>
     <span th:text="'by blotor'"></span>
 </header>
-<main th:class="'main'" th:fragment="main">
-    <div th:class="'main__content'" th:fragment="main__content">
+<main th:class="'main'"
+      th:fragment="main">
+    <div th:class="'main__content'"
+         th:fragment="main__content">
     </div>
-    <div th:class="'main__meta'" th:fragment="main__meta">
+    <div th:class="'main__meta'"
+         th:fragment="main__meta">
         <div>
             <h2 th:text="'recent article list'"></h2>
-            <div>
-                <th:block th:each="article : ${recentArticleList}">
-                    <a th:href="'article/' + ${article.uuid}" th:text="${article.subject}"></a>
-                </th:block>
-            </div>
+            <ul th:class="'recent-article-list'">
+                <li th:each="article : ${recentArticleList}">
+                    <a th:href="'article/' + ${article.uuid}"
+                       th:text="${article.subject}"></a>
+                </li>
+            </ul>
         </div>
         <div>
             <h2 th:text="'tag list'"></h2>
-            <div>
-                <th:block th:each="tag : ${tagList}">
-                    <a th:href="'tag/' + ${tag.value}" th:text="${tag.value}"></a>
-                </th:block>
-            </div>
+            <ul th:class="'tag-list'">
+                <li th:class="'tag-list__tag'"
+                    th:each="tag : ${tagList}">
+                    <a th:href="'tag/' + ${tag.value}"
+                       th:text="${tag.value}"></a>
+                </li>
+            </ul>
         </div>
     </div>
 </main>
-<footer th:class="'footer'" th:fragment="footer">
+<footer th:class="'footer'"
+        th:fragment="footer">
     <span th:text="'all rights reserved'"></span>
 </footer>
 </body>
